--- a/coachingSkill.html
+++ b/coachingSkill.html
@@ -118,14 +118,14 @@
     >
       <div class="container">
         <h2 class="title-line-left text-white">
-          Kỹ năng đào tạo và huấn luyện Nhân viên
+          Kỹ năng huấn luyện Nhân viên
         </h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">Coaching skill</li>
+            <li class="text-blue">Coaching Skills</li>
           </ul>
         </div>
       </div>
