--- a/delegationSkill.html
+++ b/delegationSkill.html
@@ -156,9 +156,9 @@
         <div class="row">
           <div class="col-12 col-md-6">
             <div class="overview-info">
-              <h2 class="title-line-left">
+              <!-- <h2 class="title-line-left">
                 NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
-              </h2>
+              </h2> -->
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
                 <p>1 ngày</p>
@@ -175,6 +175,7 @@
                     4. Giúp Nhân viên hoàn thành công việc được giao,<br> &nbsp; &nbsp; tăng thêm
                     động lực làm việc
                   </li>
+                  
                 </ol>
               </div>
 
