--- a/leadership.html
+++ b/leadership.html
@@ -79,15 +79,35 @@
               <nav class="nav-menu">
                 <ul class="nav-list">
                   <li>
-                    <a href="index.html" class='text-center'>Trang chủ</a>
+                    <a href="index.html" class="text-center">Trang chủ</a>
                   </li>
-                  <li><a href="index.html#trainingHouse" class='text-center'>Đào tạo Doanh Nghiệp</a></li>
-                  <li><a href="seminor.html" class='text-center'>Hội thảo</a></li>
-                  <li><a href="educationBusiness.html" class='text-center'>Tư vấn  Doanh Nghiệp</a></li>
-                  <li><a href="CSKH.html" class='text-center'>Tư vấn CSKH </a></li>
-                  <li><a href="XTTM.html" class='text-center'>Xúc tiến Thương mại</a></li>
-                  <li><a href="TVTD.html" class='text-center w-110' >Tư vấn tuyển dụng</a></li>
-                
+                  <li>
+                    <a href="index.html#trainingHouse" class="text-center"
+                      >Đào tạo Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="seminor.html" class="text-center">Hội thảo</a>
+                  </li>
+                  <li>
+                    <a href="educationBusiness.html" class="text-center"
+                      >Tư vấn Doanh Nghiệp</a
+                    >
+                  </li>
+                  <li>
+                    <a href="CSKH.html" class="text-center">Tư vấn CSKH </a>
+                  </li>
+                  <li>
+                    <a href="XTTM.html" class="text-center"
+                      >Xúc tiến Thương mại</a
+                    >
+                  </li>
+                  <li>
+                    <a href="TVTD.html" class="text-center w-110"
+                      >Tư vấn tuyển dụng</a
+                    >
+                  </li>
+
                   <li><a href="contacts.html">Liên hệ</a></li>
                 </ul>
               </nav>
@@ -117,13 +137,15 @@
       style="background-image: url(assets/img/banner-seminar.jpg)"
     >
       <div class="container">
-        <h2 class="title-line-left text-white">Kỹ năng lãnh đạo</h2>
+        <h2 class="title-line-left text-white">
+          NÂNG CAO NĂNG LỰC QUẢN TRỊ DOANH NGHIỆP
+        </h2>
         <div class="breadcrumbs">
           <ul>
             <li class="text-blue">
               <a class="text-blue" href="index.html">Hội thảo chuyên đề</a>
             </li>
-            <li class="text-blue">Kỹ năng lãnh đạo</li>
+            <li class="text-blue">NÂNG CAO NĂNG LỰC QUẢN TRỊ DOANH NGHIỆP</li>
           </ul>
         </div>
       </div>
@@ -137,8 +159,7 @@
           <div class="col-12 col-md-6">
             <div class="overview-info">
               <h2 class="title-line-left">
-                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH
-                NGHIỆP NHẬT
+                NÂNG CAO TÁC PHONG LÀM VIỆC CHUYÊN NGHIỆP TẠI DOANH NGHIỆP NHẬT
               </h2>
               <div class="overview-info-item">
                 <h5>Thời gian học dự kiến</h5>
@@ -149,15 +170,14 @@
 
                 <span>Mục đích nhằm giúp học viên:</span>
                 <ol>
-                  <li>1. Hiểu rõ hơn về văn hóa doanh nghiệp Nhật Bản</li>
+                  <li>1. Nắm bắt chu trình phát triển năng lực quản trị</li>
+                  <li>2. Phân biệt giữa lãnh đạo và quản trị</li>
+                  <li>3. Hiểu rõ chân dung nhà quản trị chuyên nghiệp</li>
+                  <li>4. Nhận thức vai trò và chức năng của người quản trị</li>
                   <li>
-                    2. Hiểu rõ hơn về suy nghĩ, cách làm việc của người Nhật
+                    5. Xây dựng khả năng tương tác với các cấp quản trị, các
+                    <br> &nbsp; &nbsp; phòng ban khác hiệu quả hơn
                   </li>
-                  <li>
-                    3. Hệ thống hóa các kỹ năng, kiến thức cơ bản của tác phong
-                    làm việc chuyên nghiệp
-                  </li>
-                  <li>4. Giúp ngày càng nâng cao chất lượng công việc</li>
                 </ol>
               </div>
 
@@ -223,7 +243,8 @@
               <div class="overview-info-item">
                 <h5>Lưu ý:</h5>
                 <p>
-					Nội dung khoá học có thể điều chỉnh một ít, phù hợp với đối tượng tham dự.
+                  Nội dung khoá học có thể điều chỉnh một ít, phù hợp với đối
+                  tượng tham dự.
                 </p>
               </div>
               <div class="history-cert">
@@ -249,7 +270,7 @@
           <div class="col-12 col-sm-6">
             <div class="history-info-cover">
               <div class="history-info">
-                <h4 class="title"><span>Phần I: </span>DẪN NHẬP</h4>
+                <h4 class="title"><span>Chương 1: </span>Chân dung nhà quản trị chuyên nghiệp</h4>
                 <ol>
                   <li>1. Hiểu về tổ chức</li>
                   <li>2. Hiểu sự kỳ vọng của cấp trên người Nhật</li>
@@ -313,7 +334,6 @@
                   </li>
                 </ol>
               </div>
-              
             </div>
           </div>
         </div>
@@ -323,57 +343,58 @@
 
     <!--================= S-TESTIMONIALS =================-->
     <section class="s-testimonials about-testimonials-slider">
-
-		<div class="container">
-		  <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
-		  <!-- <p class="slogan">
+      <div class="container">
+        <h2 class="title-line uppercase">Ý kiến phản hồi</h2>
+        <!-- <p class="slogan">
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
 			eiusmod tempor incididunt ut labore.
 		  </p> -->
-		  <div class="slider-testimonials">
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-				  Chương trình thực tế ứng dụng cao, có thể áp dụng trong công việc hiện tại
-				</div>
-				<!-- <h4 class="name">Louisa Russell</h4>
+        <div class="slider-testimonials">
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-1.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Chương trình thực tế ứng dụng cao, có thể áp dụng trong công
+                việc hiện tại
+              </div>
+              <!-- <h4 class="name">Louisa Russell</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-				  Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của tôi 
-				</div>
-				<!-- <h4 class="name">Samson Peters</h4>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-2.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Chương trình hôm nay rất bổ ích cho công việc và cuộc sống của
+                tôi
+              </div>
+              <!-- <h4 class="name">Samson Peters</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-			<div class="slide-testimonial">
-			  <div class="testimonial-item">
-				<!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
-				<span class="slide-quote"
-				  ><i class="fa fa-quote-left" aria-hidden="true"></i
-				></span>
-				<div class="testimon-content">
-          Học hỏi và bổ sung nhiều kiến thức cho bản thân.
-				</div>
-				<!-- <h4 class="name">Marry James</h4>
+            </div>
+          </div>
+          <div class="slide-testimonial">
+            <div class="testimonial-item">
+              <!-- <img src="assets/img/testimonials-3.jpg" alt="img" /> -->
+              <span class="slide-quote"
+                ><i class="fa fa-quote-left" aria-hidden="true"></i
+              ></span>
+              <div class="testimon-content">
+                Học hỏi và bổ sung nhiều kiến thức cho bản thân.
+              </div>
+              <!-- <h4 class="name">Marry James</h4>
 				<div class="prof">Regular Client</div> -->
-			  </div>
-			</div>
-		  </div>
-		</div>
-	  </section>
-	  <!--=============== S-TESTIMONIALS END ===============-->
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!--=============== S-TESTIMONIALS END ===============-->
 
     <!--===================== FOOTER =====================-->
     <footer>
@@ -384,11 +405,14 @@
               <img src="assets/img/Logo-footer.png" alt="logo" />
             </a>
             <div class="footer-text">
-				CÔNG TY TNHH TV-TM-DV <br> OMOTENASHI VIỆT-NHẬT
+              CÔNG TY TNHH TV-TM-DV <br />
+              OMOTENASHI VIỆT-NHẬT
             </div>
             <ul class="soc-link">
               <li>
-                <a target="_blank" href="https://www.facebook.com/groups/www.omotenashi.com.vn/"
+                <a
+                  target="_blank"
+                  href="https://www.facebook.com/groups/www.omotenashi.com.vn/"
                   ><i class="fab fa-facebook-f"></i
                 ></a>
               </li>
@@ -398,14 +422,14 @@
                   ><i class="fab fa-youtube"></i
                 ></a>
               </li>
-			  <li>
-				<a
-				  target="_blank"
-				  href="mailto:
+              <li>
+                <a
+                  target="_blank"
+                  href="mailto:
 				  thao.nguyen@omotenashi.com.vn"
-				  ><i class="fas fa-envelope"></i
-				></a>
-			  </li>
+                  ><i class="fas fa-envelope"></i
+                ></a>
+              </li>
             </ul>
           </div>
           <div class="col-12 col-sm-6 col-md-4">
@@ -414,8 +438,9 @@
               <li>
                 <i class="fas fa-map-marker-alt"></i>
                 <a href="contacts.html"
-                  >Office 2, 8th Floor, Office area, Pearl Plaza Building, 561A Dien Bien Phu Street, Ward 25, Binh Thanh District, HCM City </a
-                >
+                  >Office 2, 8th Floor, Office area, Pearl Plaza Building, 561A
+                  Dien Bien Phu Street, Ward 25, Binh Thanh District, HCM City
+                </a>
               </li>
               <li>
                 <i class="fa fa-phone" aria-hidden="true"></i>
@@ -423,7 +448,9 @@
               </li>
               <li>
                 <i class="fas fa-globe" aria-hidden="true"></i>
-                <a href="https://www.omotenashi.com.vn/" target="_blank">omotenashi.com.vn</a>
+                <a href="https://www.omotenashi.com.vn/" target="_blank"
+                  >omotenashi.com.vn</a
+                >
               </li>
             </ul>
           </div>
@@ -493,15 +520,19 @@
           <div class="row">
             <div class="col-12 col-md-4">
               <div class="copyright">
-				© 2021 Bản quyền thuộc về 
-                <a target="_blank" href="https://www.omotenashi.com.vn/">OMOTENASHI </a>
+                © 2021 Bản quyền thuộc về
+                <a target="_blank" href="https://www.omotenashi.com.vn/"
+                  >OMOTENASHI
+                </a>
               </div>
             </div>
             <div class="col-8">
               <ul class="footer-menu">
-                <li><a href="seminor.html" >Hội thảo</a></li>
-                <li><a href="educationBusiness.html">Tư vấn  Doanh Nghiệp</a></li>
-                <li><a href="CSKH.html" >Tư vấn CSKH </a></li>
+                <li><a href="seminor.html">Hội thảo</a></li>
+                <li>
+                  <a href="educationBusiness.html">Tư vấn Doanh Nghiệp</a>
+                </li>
+                <li><a href="CSKH.html">Tư vấn CSKH </a></li>
                 <li><a href="XTTM.html">Xúc tiến Thương mại</a></li>
                 <li><a href="contacts.html">Liên hệ</a></li>
               </ul>
