--- a/motivatedCommunication.html
+++ b/motivatedCommunication.html
@@ -105,7 +105,7 @@
   <!--=================== PAGE-TITLE ===================-->
   <div class="page-title" style="background-image: url(assets/img/banner-seminar.jpg)">
     <div class="container">
-      <h2 class="title-line-left text-white">Kĩ năng giao tiếp hiệu quả</h2>
+      <h2 class="title-line-left text-white">Kĩ năng giao tiếp tạo động lực cho nhân viên</h2>
       <div class="breadcrumbs">
         <ul>
           <li class="text-blue">
