--- a/problemSolvingCommunication.html
+++ b/problemSolvingCommunication.html
@@ -168,7 +168,12 @@
               <div class="overview-info-item">
                 <h5>ĐỐI TƯỢNG:</h5>
                 <ol>
-                  <li></li>
+                  <ol>
+                    <li>1. Cấp Nhân viên & Cấp Quản lý</li>
+                    <li>
+                      2. Anh/Chị quan tâm, mong muốn học hỏi về kỹ năng giải quyết vấn đề.
+                    </li>
+                  </ol>
                 </ol>
               </div>
               <div class="overview-info-item">
